--- a/src/style.css
+++ b/src/style.css
@@ -38,14 +38,26 @@
     text-align: center;
     padding-right: 6vw;
     border-right: 2px solid;
+    font-size: 2rem;
   }
   .container nav button {
+    font-size: 1.5rem;
     border-radius: 10px;
     background-color: white;
-    padding: 5%;
+    padding: 5% 10%;
     border-left: 0px;
     border-right: 0px;
+    display: flex;
+    justify-content: space-between;
+    
+    align-items: center;
   }
   .container div {
     flex: 5;
+  }
+
+
+  button img {
+    
+    height: 1.5em;
   }
