--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,20 @@
     display: flex;
     height: 85vh;
   }
+  .container .navbar {
+    flex: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .container .navbar * {
+    text-align: center;
+  }
+ 
+  .container .content {
+    flex: 5;
+  }
   .container nav {
     font-family: 'Josefin-sans';
     display: flex;
@@ -36,9 +50,10 @@
     flex: 1;
     gap: 10px;
     text-align: center;
-    padding-right: 6vw;
+    padding: 0px 2vw;
     border-right: 2px solid;
     font-size: 2rem;
+    
   }
   .container nav button {
     font-size: 1.5rem;
@@ -52,12 +67,39 @@
     
     align-items: center;
   }
-  .container div {
-    flex: 5;
+  .container nav button:active {
+    background-color: yellow;
   }
+  
 
 
   button img {
     
     height: 1.5em;
   }
+
+  #projects-list {
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+  }
+
+
+  #navform-submit, #navform-cancel {
+    width: 5rem;
+    height: 1rem;
+    font-size: 0.8rem;
+  }
+
+
+  .button-div {
+    display: flex;
+    justify-content: space-between;
+  }
+  .projects form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  /*  */
