--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@
     text-align: center;
   }
  
-  .container .content {
+  .container #content {
     flex: 5;
   }
   .container nav {
@@ -55,7 +55,7 @@
     font-size: 2rem;
     
   }
-  .container nav button {
+  .container button {
     font-size: 1.5rem;
     border-radius: 10px;
     background-color: white;
@@ -71,7 +71,7 @@
     background-color: yellow;
   }
   
-
+  
 
   button img {
     
@@ -82,6 +82,7 @@
     display: flex;
     flex-direction: column;
     font-size: 1rem;
+    gap: 1rem;
   }
 
 
@@ -91,6 +92,12 @@
     font-size: 0.8rem;
   }
 
+  #navform-submit {
+    background-color: rgb(196, 236, 136);
+  }
+  #navform-cancel {
+    background-color: rgb(238, 150, 150);
+  }
 
   .button-div {
     display: flex;
@@ -102,4 +109,15 @@
     gap: 1rem;
   }
 
+  .projects div button {
+    width: 100%;
+    height: 2rem;
+    justify-content: center;
+    border: 1px solid;
+  }
+  .nav-input {
+    border: 2px solid;
+    border-radius: 5px;
+    height: 2rem;
+  }
   /*  */
