--- a/src/style.css
+++ b/src/style.css
@@ -120,4 +120,23 @@
     border-radius: 5px;
     height: 2rem;
   }
+
+  .button-container {
+    border: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .projects div button.project-name-button {
+    border: 0px;
+    flex: 3;
+  }
+  
+  .projects div button.del-button, .projects div button.edit-button{
+    border: 0px;
+    flex: 1;
+    width: 1rem;
+    padding: 0%;
+  }
   /*  */
