--- a/src/style.css
+++ b/src/style.css
@@ -243,3 +243,63 @@ form#myForm button[type="cancel"] {
   background-color: #ccc; /* Gray for cancel */
   color: black;
 }
+
+.strike-out {
+  text-decoration: line-through;
+}
+
+/* Star Shape Defined */
+.star-shape {
+  display: none; /* Hide the actual checkbox */
+  position: relative;
+}
+
+.star-shape + label {
+  display: inline-block;
+  cursor: pointer;
+  width: 30px; /* Adjust width and height for desired size */
+  height: 30px;
+  
+}
+
+.star-shape + label::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: gold; /* Adjust color as desired */
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    67% 88%,
+    33% 88%,
+    0% 35%,
+    39% 35%
+  );
+}
+
+.star-shape:checked + label::after {
+  background-color: transparent; /* Transparent when checked */
+}
+
+.star-shape + label::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ccc; /* Adjust color as desired */
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    67% 88%,
+    33% 88%,
+    0% 35%,
+    39% 35%
+  );
+}
